# DOMA

./: Cargo.toml  README.md  agents.md
.github/packaging/: PKGBUILD  homebrew.rb  scoop.json
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs
src/client/: mod.rs  opencode.rs  types.rs
src/config/: settings.rs
src/storage/: engine.rs
src/ui/: chat.rs  header.rs  input.rs  layout.rs  mod.rs  status.rs
