[package]
name = "doma"
version = "0.1.0"
edition = "2021"
description = "A lightweight, cross-platform, terminal-based general-purpose AI chat interface"
authors = ["GustavoDGoat"]
license = "MIT"
repository = "https://github.com/GustavoDGoat/DOMA"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
base64 = "0.22"
image = "0.25"
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
